# guayabita_game_test

./: GuayabitaTk.sol  README.md  VRF.py  abi.json  game.py  pyproject.toml  test.py  web3connect.py  web3connect_avalanche.py
.states/vm-cancun/: state.json
contracts/: GuayabitaTk.sol  VRFv2Consumer.sol  contact.sol  guayabita.sol  pagoCrossChain.sol
contracts/artifacts/: MiPrimerContrato.json  MiPrimerContrato_metadata.json  RandomNumberConsumerV2.json  RandomNumberConsumerV2_metadata.json  SubscriptionConsumer.json  SubscriptionConsumer_metadata.json  TestContract.json  TestContract_metadata.json  VRFv2Consumer.json  VRFv2Consumer_metadata.json
