[tool.poetry]
name = "guayabita-game"
version = "0.1.0"
description = ""
authors = ["oscar50 <oscar@whaleandjaguar.co>"]
readme = "README.md"
packages = [{include = "guayabita_game"}]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.5.2"
numpy = "^1.26.2"
pygame-gui = "^0.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
